config/base/nifi/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nifi
  labels:
    app: nifi
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: nifi-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
spec:
  rules:
    - host: nifi.kashmora.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nifi
              servicePort: 8080
